cmake_minimum_required(VERSION 3.9)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode cmake-build-debug/code/main.cpp cmake-build-debug/code/TwoSumSolution.cpp cmake-build-debug/code/TwoSumSolution.h cmake-build-debug/code/addTwoNumbersSolution.cpp cmake-build-debug/code/addTwoNumbersSolution.h
        cmake-build-debug/code/LongestSubstringSolution.cpp cmake-build-debug/code/LongestSubstringSolution.h cmake-build-debug/code/findMedianSortedSolution.cpp cmake-build-debug/code/findMedianSortedSolution.h
        cmake-build-debug/code/longestPalindromeSolution.cpp cmake-build-debug/code/longestPalindromeSolution.h cmake-build-debug/code/convertCoutNSolution.cpp cmake-build-debug/code/convertCoutNSolution.h
        cmake-build-debug/code/reverseInt32Solution.cpp cmake-build-debug/code/reverseInt32Solution.h cmake-build-debug/code/myAtioSolution.cpp cmake-build-debug/code/myAtioSolution.h cmake-build-debug/code/isPalindromeSolution.cpp cmake-build-debug/code/isPalindromeSolution.h cmake-build-debug/code/isMatchSolution.cpp cmake-build-debug/code/isMatchSolution.h cmake-build-debug/code/maxAreaSolution.cpp cmake-build-debug/code/maxAreaSolution.h cmake-build-debug/code/intToRomanSolution.cpp cmake-build-debug/code/intToRomanSolution.h cmake-build-debug/code/romanToIntSolution.cpp cmake-build-debug/code/romanToIntSolution.h cmake-build-debug/code/maxNumberSolution.cpp cmake-build-debug/code/maxNumberSolution.h)